--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
-  <title>Yucheng Shi</title>
+  <title>Yiwei Li</title>
   
-  <meta name="author" content="Yucheng Shi">
+  <meta name="author" content="Yiwei Li">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -49,10 +49,10 @@
                 <tr style="padding:10px">
                   <td style="padding:2.5%;width:63%;vertical-align:middle;line-height: 150%;">
                     <p style="text-align:center">
-                      <name>Yucheng Shi - 史淯城</name>
+                      <name>Yiwei Li - 李轶为</name>
                     </p>
                     <p>
-                      I am a third-year Ph.D. student at the University of Georgia, under the mentorship of Prof. <a href="https://cobweb.cs.uga.edu/~ninghaoliu/">Ninghao Liu</a>. My research is centered around the exciting fields of <strong>Responsible AI</strong>, with a primary goal to craft interpretable deep learning models that produce reliable and verified outputs. I am also interested in <strong>AI4Med</strong> and am currently a data scientist intern (remote) at <a href="https://camca.mgh.harvard.edu/about-us/">CAMCA</a>, Harvard Medical School. My specific areas of research include:
+                      I am a second-year Ph.D. student at the University of Georgia, under the mentorship of Prof. <a href="https://cobweb.cs.uga.edu/~tliu/">Tianming Liu</a>. My research is centered around the exciting fields of <strong>AGI and Computational Neuroscience</strong>, with a primary goal to craft interpretable deep learning models that produce reliable and verified outputs. I am also interested in <strong>AI4Med</strong> and am currently a data scientist intern (remote) at <a href="https://camca.mgh.harvard.edu/about-us/">CAMCA</a>, Harvard Medical School. My specific areas of research include:
                       <ul>
                           <li><strong>Interpretable AI System Design:</strong> <a href="https://arxiv.org/abs/2403.19631">Retrieval Augmented Model Editing</a>, <a href="https://arxiv.org/abs/2309.16035">Medical RAG</a>, <a href="https://arxiv.org/abs/2305.03513">ChatGraph</a>, <a href="https://arxiv.org/abs/2308.09663">GiGaMAE</a>. </li>
                           <li><strong>Explainability and its utilization:</strong> <a href="https://arxiv.org/abs/2403.08946">XAI Usage with LLMs</a>, <a href="http://arxiv.org/abs/2307.01053">ENGAGE</a>, <a href="https://arxiv.org/abs/2310.10708">Explanation of Deep Visual Neurons</a>, <a href="https://arxiv.org/abs/2305.14582">XAI with Time Series</a>.</li>
