--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </p>  
                   </td>
                   <td style="padding:2.5%;width:25%;max-width:25%">
-                    <a href="images/info.jpeg"><img style="width:100%;max-width:100%" alt="info photo" src="images/info.jpeg" class="hoverZoomLink"></a>
+                    <a href="images/yiwei.jpg"><img style="width:100%;max-width:100%" alt="info photo" src="images/info.jpeg" class="hoverZoomLink"></a>
                   </td>
                 </tr>
               </tbody></table>
