--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
                     <p style="text-align:center">
                       <span style="white-space: nowrap;">
                         <i class="fa fa-envelope"></i> 
-                        <a href="mailto:yucheng.shi@uga.edu">UGA</a> / 
-                        <a href="mailto:yshi19@mgh.harvard.edu">Harvard</a>
+                        <a href="mailto:yl80817@uga.edu">UGA</a> / 
+                        <a href="mailto:yili6@mgh.harvard.edu">Harvard</a>
                       </span>
                       &nbsp;&nbsp;|&nbsp;&nbsp;
-                      <a href="https://www.linkedin.com/in/yucheng-shi-39a57a170/"><i class="fa fa-linkedin"></i> LinkedIn</a>
+                      <a href="https://www.linkedin.com/in/yiwei-li-84708526b/"><i class="fa fa-linkedin"></i> LinkedIn</a>
                       &nbsp;&nbsp;|&nbsp;&nbsp;
-                      <a href="https://scholar.google.co.uk/citations?user=rIFRHvIAAAAJ&hl=en&oi=ao"><i class="fa fa-graduation-cap"></i> Google Scholar</a>
+                      <a href="https://scholar.google.com/citations?user=sfEPWiAAAAAJ&hl=en"><i class="fa fa-graduation-cap"></i> Google Scholar</a>
                       &nbsp;&nbsp;|&nbsp;&nbsp;
-                      <a href="https://github.com/sycny"><i class="fa fa-github"></i> GitHub</a>
+                      <a href="https://github.com/levyisthebest"><i class="fa fa-github"></i> GitHub</a>
                       &nbsp;&nbsp;|&nbsp;&nbsp;
                       <a href="https://sycny.github.io/Yucheng_Shi_Resume_Fall_2024.pdf" target="_blank"><i class="fa fa-file-text-o"></i> CV</a>
                     </p>  
                   </td>
                   <td style="padding:2.5%;width:25%;max-width:25%">
-                    <a href="images/yiwei.jpg"><img style="width:100%;max-width:100%" alt="info photo" src="images/info.jpeg" class="hoverZoomLink"></a>
+                    <a href="images/Yiwei.jpg"><img style="width:100%;max-width:100%" alt="info photo" src="images/Yiwei.jpg" class="hoverZoomLink"></a>
                   </td>
                 </tr>
               </tbody></table>
