--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                       <name>Yiwei Li - 李轶为</name>
                     </p>
                     <p>
-                      I am a second-year Ph.D. student at the University of Georgia, under the mentorship of Prof. <a href="https://cobweb.cs.uga.edu/~tliu/">Tianming Liu</a>. My research is centered around the exciting fields of <strong>AGI and Computational Neuroscience</strong>, with a primary goal to craft interpretable deep learning models that produce reliable and verified outputs. I am also interested in <strong>AI4Med</strong> and am currently a data scientist intern (remote) at <a href="https://camca.mgh.harvard.edu/about-us/">CAMCA</a>, Harvard Medical School. My specific areas of research include:
+                      I am a second-year Ph.D. student at the University of Georgia, under the mentorship of Prof. <a href="https://cobweb.cs.uga.edu/~tliu/">Tianming Liu</a>. My research is centered around the exciting fields of <strong>AGI and Computational Neuroscience</strong>, with primary goal is to bridge the gap between AGI and the human brain, particularly in the context of multimodality, exploring the mechanisms behind human intelligence. I am also interested in <strong>AI4Med</strong> and am currently a data scientist intern (remote) at <a href="https://camca.mgh.harvard.edu/about-us/">CAMCA</a>, Harvard Medical School. My specific areas of research include:
                       <ul>
-                          <li><strong>Interpretable AI System Design:</strong> <a href="https://arxiv.org/abs/2403.19631">Retrieval Augmented Model Editing</a>, <a href="https://arxiv.org/abs/2309.16035">Medical RAG</a>, <a href="https://arxiv.org/abs/2305.03513">ChatGraph</a>, <a href="https://arxiv.org/abs/2308.09663">GiGaMAE</a>. </li>
-                          <li><strong>Explainability and its utilization:</strong> <a href="https://arxiv.org/abs/2403.08946">XAI Usage with LLMs</a>, <a href="http://arxiv.org/abs/2307.01053">ENGAGE</a>, <a href="https://arxiv.org/abs/2310.10708">Explanation of Deep Visual Neurons</a>, <a href="https://arxiv.org/abs/2305.14582">XAI with Time Series</a>.</li>
-                          <li><strong>Reliability and Safety:</strong> <a href="https://arxiv.org/abs/2303.12175">Black-box backdoor defense (ZIP).</a>  </li>
-                          <li><strong>Medical Foundation Models:</strong> <a href="https://arxiv.org/abs/2408.11848">Radiology Llama 70B Post-training (tech report)</a>. </li>
+                          <li><strong>Medical Video Generation:</strong> <a href="https://arxiv.org/html/2410.03143v1">ECHOPulse(ECG controlled ECHO video generation)</a>. </li>
+                          <li><strong>Sim2Real:</strong> <a href="https://arxiv.org/abs/2403.11459">ALDMGrasping(Robot sim2real)</a>.</li>
+                          <li><strong>Neuron Reconstrcution:</strong> <a href="https://academic.oup.com/bioinformaticsadvances/article/3/1/vbad054/7172445">NRRS(Solution to backbone deviation during neuron reconstruction)</a>.</li>
+                          <li><strong>Medical Foundation Models:</strong> <a href="https://arxiv.org/abs/2403.12416">Eye-gaze Guided Multi-modal Alignment for Medical Representation Learning</a>. </li>
                       </ul>
                     </p>
                     <p style="color:#e74c3c; font-weight:bold; text-align:center; margin-top:10px;">I am actively seeking a research internship starting in Summer 2025.</p>
