--- a/index.html
+++ b/index.html
@@ -87,18 +87,11 @@
         <section id="News">
             <h2 style="padding-bottom:1vh;"> News </h2>
             <table style="line-height:150%" class="table table-hover table-striped">
-                <tr><td style="width:20%;">2024/11 - Our paper received </strong> <a href="https://computing.uga.edu/news/stories/2024/dr-ninghao-liu-wins-distinguished-paper-award">Distinguished Paper Award</a> from AMIA 2024. </td></tr>
-                <tr><td style="width:20%;">2024/07 - One paper accepted by CIKM 2024. </td></tr>
-                <tr><td style="width:20%;">2024/06 - One paper accepted by AMIA 2024. </td></tr>
-                <tr><td style="width:20%;">2024/06 - Give one tutorial about XAI and its medical application on <a href="https://ieeeichi2024.github.io/program.html">ICHI 2024. </td></tr>
+                <tr><td style="width:20%;">2024/10 - One paper accepted by PLoS Global Health. </td></tr>
+                <tr><td style="width:20%;">2024/09 - One paper accepted by NIPS 2024. </td></tr>
                 <tr><td style="width:20%;">2024/05 - Starting my remote internship at Harvard Medical School, advised by Dr. <a href="https://xiangli-shaun.github.io/index.html">Xiang Li. </td></tr>
-                <tr><td style="width:20%;">2024/01 - One paper accepted by TheWenConf 2024. </td></tr>
-                <!-- <tr><td style="width:20%;">2023/10 - One paper accepted by AAAI 2024. </td></tr> -->
-                <!-- <tr><td style="width:20%;">2023/09 - One paper accepted by ICDMW 2023. </td></tr> -->
-                <tr><td style="width:20%;">2023/09 - One paper accepted by NeurIPS 2023. </td></tr> 
-                <!-- <tr><td style="width:20%;">2023/08 - One paper accepted by CIKM 2023. </td></tr> -->
-                <!-- <tr><td style="width:20%;">2023/06 - One paper accepted by ECML-PKDD 2023. </td></tr> -->
-                <tr><td style="width:20%;">2022/01 - I joined the DLGA lab at the University of Georgia as a research assistant. </td></tr>
+                <tr><td style="width:20%;">2024/04 - One paper accepted by MICCAI 2024. </td></tr>
+                <tr><td style="width:20%;">2023/08 - I joined the CAID lab at the University of Georgia as a research assistant. </td></tr>
             </table>
         </section>
 
