--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
         <br>
                 
-        <section id="Teaching">
+<!--         <section id="Teaching">
         <h2 style="padding-bottom:1vh;">Teaching</h2>
         <table style="line-height:150%" class="table table-hover table-striped">
           <tr><td style="width:20%;">Teaching Assistant of CSCI4380/6380 Data Mining and CSCI4370/6370 Database Management, University of Georgia, Spring 2024</td></tr>
@@ -317,7 +317,7 @@
           <tr><td style="width:20%;">Teaching Assistant of CSCI4380/6380 Data Mining, University of Georgia, Spring 2023</td></tr>
           <tr><td style="width:20%;">Teaching Assistant of CSCI4360/6360 Data Science, University of Georgia, Fall 2022</td></tr>
         </table> 
-        </section>
+        </section> -->
         
         <br>
 
@@ -326,10 +326,10 @@
           <div class="row">
             <div class="col-md-8">
               <p>
-                Outside of research, I enjoy photography as a way to capture and appreciate life's small, beautiful moments. My camera helps me celebrate the everyday joys that surround us.              
-                <a href="https://www.flickr.com/photos/157896273@N06/" class="btn btn-primary" target="_blank">
+                Outside of research, I enjoy play basketball and cooking. I also have an adorable cat called Rainbow.              
+<!--                 <a href="https://www.flickr.com/photos/157896273@N06/" class="btn btn-primary" target="_blank">
                 <i class="fa fa-flickr"></i> My Flickr.
-                </a>
+                </a> -->
             </div>
           </div>
         </section>
