--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           <div class="row">
             <div class="col-md-8">
               <p>
-                Outside of research, I enjoy play basketball and cooking. I also have an adorable cat called Rainbow.              
+                Outside of research, I enjoy playing basketball and cooking. I also have an adorable cat called Rainbow.              
 <!--                 <a href="https://www.flickr.com/photos/157896273@N06/" class="btn btn-primary" target="_blank">
                 <i class="fa fa-flickr"></i> My Flickr.
                 </a> -->
