--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
             <h2 style="padding-bottom:1vh;"> News </h2>
             <table style="line-height:150%" class="table table-hover table-striped">
                 <tr><td style="width:20%;">2024/10 - One paper accepted by PLoS Global Health. </td></tr>
+                <tr><td style="width:20%;">2024/10 - One paper accepted by ISBI 2025. </td></tr>
+                <tr><td style="width:20%;">2024/10 - One paper accepted by PLoS Global Health. </td></tr>
                 <tr><td style="width:20%;">2024/09 - One paper accepted by NIPS 2024. </td></tr>
                 <tr><td style="width:20%;">2024/05 - Starting my remote internship at Harvard Medical School, advised by Dr. <a href="https://xiangli-shaun.github.io/index.html">Xiang Li. </td></tr>
                 <tr><td style="width:20%;">2024/04 - One paper accepted by MICCAI 2024. </td></tr>
