--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
         <section id="News">
             <h2 style="padding-bottom:1vh;"> News </h2>
             <table style="line-height:150%" class="table table-hover table-striped">
-                <tr><td style="width:20%;">2024/10 - One paper accepted by PLoS Global Health. </td></tr>
-                <tr><td style="width:20%;">2024/10 - One paper accepted by ISBI 2025. </td></tr>
+                <tr><td style="width:20%;">2025/1 - One paper accepted by ICLR 2025. </td></tr>
+                <tr><td style="width:20%;">2025/1 - One paper accepted by ICRA 2025. </td></tr>
+                <tr><td style="width:20%;">2024/12 - One paper accepted by ISBI 2025. </td></tr>
                 <tr><td style="width:20%;">2024/10 - One paper accepted by PLoS Global Health. </td></tr>
                 <tr><td style="width:20%;">2024/09 - One paper accepted by NIPS 2024. </td></tr>
                 <tr><td style="width:20%;">2024/05 - Starting my remote internship at Harvard Medical School, advised by Dr. <a href="https://xiangli-shaun.github.io/index.html">Xiang Li. </td></tr>
