--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <tr><td style="width:20%;">2025/1 - One paper accepted by ICRA 2025. </td></tr>
                 <tr><td style="width:20%;">2024/12 - One paper accepted by ISBI 2025. </td></tr>
                 <tr><td style="width:20%;">2024/10 - One paper accepted by PLoS Global Health. </td></tr>
-                <tr><td style="width:20%;">2024/09 - One paper accepted by NIPS 2024. </td></tr>
+                <tr><td style="width:20%;">2024/09 - One paper accepted by NeurIPS 2024. </td></tr>
                 <tr><td style="width:20%;">2024/05 - Starting my remote internship at Harvard Medical School, advised by Dr. <a href="https://xiangli-shaun.github.io/index.html">Xiang Li. </td></tr>
                 <tr><td style="width:20%;">2024/04 - One paper accepted by MICCAI 2024. </td></tr>
                 <tr><td style="width:20%;">2023/08 - I joined the CAID lab at the University of Georgia as a research assistant. </td></tr>
