--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                       &nbsp;&nbsp;|&nbsp;&nbsp;
                       <a href="https://github.com/levyisthebest"><i class="fa fa-github"></i> GitHub</a>
                       &nbsp;&nbsp;|&nbsp;&nbsp;
-                      <a href="https://sycny.github.io/Yucheng_Shi_Resume_Fall_2024.pdf" target="_blank"><i class="fa fa-file-text-o"></i> CV</a>
+                      <a href="https://sycny.github.io/Yiwei_Li_Resume_Spring_2025.pdf" target="_blank"><i class="fa fa-file-text-o"></i> CV</a>
                     </p>  
                   </td>
                   <td style="padding:2.5%;width:25%;max-width:25%">
@@ -115,7 +115,7 @@
         </tr>
         </tbody></table>
 
-        <h3 style="text-indent:20px;color:#4A90E2;border-bottom:2px solid #4A90E2;padding-bottom:5px;">Interpretable AI System Design</h3>
+        <h3 style="text-indent:20px;color:#4A90E2;border-bottom:2px solid #4A90E2;padding-bottom:5px;">Video Generation</h3>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <!-- Paper entries for Interpretable AI System Design -->
@@ -124,15 +124,15 @@
 
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
-                <img src="images/RAE.png" alt="hpp" style="border-style: none" width="220">
+                <img src="images/ICLR_ECHOPulse.png" alt="hpp" style="border-style: none" width="220">
               </td>
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
                 <papertitle>Retrieval-Enhanced Knowledge Editing for Multi-Hop Question Answering in Language Models</papertitle>
                 </p>
-                <strong>Yucheng Shi</strong>, Qiaoyu Tan, Xuansheng Wu, Shaochen Zhong, Kaixiong Zhou, Ninghao Liu.
+                <strong>Yiwei Li*</strong>, Sekeun Kim*, Zihao Wu, Hanqi Jiang, Yi Pan, Pengfei Jin, Sifan Song, Yucheng Shi, Xiaowei Yu, Tianze Yang, Tianming Liu, Quanzheng Li, Xiang Li.
                 <br>
-                <em><strong>(CIKM)</strong>, ACM International Conference on Information and Knowledge Management, 2024.</em>
+                <em><strong>(ICLR 2025)</strong>, ACM International Conference on Information and Knowledge Management, 2024.</em>
                 <br>
                 <a href="https://arxiv.org/abs/2403.19631">[Paper]</a>
                 <a href="https://github.com/sycny/RAE">[code]</a> 
