--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                 </p>
                 <strong>Yiwei Li*</strong>, Sekeun Kim*, Zihao Wu, Hanqi Jiang, Yi Pan, Pengfei Jin, Sifan Song, Yucheng Shi, Xiaowei Yu, Tianze Yang, Tianming Liu, Quanzheng Li, Xiang Li.
                 <br>
-                <em><strong>(ICLR 2025)</strong>, ACM International Conference on Information and Knowledge Management, 2024.</em>
+                <em><strong>(ICLR 2025)</strong>, The Thirteenth International Conference on Learning Representations, 2025.</em>
                 <br>
-                <a href="https://arxiv.org/abs/2403.19631">[Paper]</a>
-                <a href="https://github.com/sycny/RAE">[code]</a> 
+                <a href="https://arxiv.org/html/2410.03143v1">[Paper]</a>
+                <a href="https://github.com/levyisthebest/ECHOPulse_Prelease">[code]</a> 
 
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
