--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                       &nbsp;&nbsp;|&nbsp;&nbsp;
                       <a href="https://github.com/levyisthebest"><i class="fa fa-github"></i> GitHub</a>
                       &nbsp;&nbsp;|&nbsp;&nbsp;
-                      <a href="https://sycny.github.io/Yiwei_Li_Resume_Spring_2025.pdf" target="_blank"><i class="fa fa-file-text-o"></i> CV</a>
+                      <a href="https://github.com/levyisthebest/yiweili_levi.github.io/blob/main/Yiwei_Li_Resume_Spring_2025.pdf" target="_blank"><i class="fa fa-file-text-o"></i> CV</a>
                     </p>  
                   </td>
                   <td style="padding:2.5%;width:25%;max-width:25%">
