--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                 <br>
                 <a href="https://arxiv.org/html/2410.03143v1">[Paper]</a>
                 <a href="https://github.com/levyisthebest/ECHOPulse_Prelease">[code]</a> 
+        </tbody></table>
 
 
         
