--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">  
               <td style="padding:10px;width:20%;vertical-align:middle">
-                  <img src="images/EyeGaze.png" alt="hpp" style="border-style: none" width="220">
+                  <img src="images/EyeGazed.png" alt="hpp" style="border-style: none" width="220">
                 </td>
                 <td style="padding:10px;width:80%;vertical-align:middle">
                   <p>
